<resources>
    <string name="app_name">Health App</string>
    <string name="home_title">ANTE-NATAL CARE APP</string>
    <string name="antenatalTest">Antenatal Tests</string>
    <string name="immunization">Immunization</string>
    <string name="food_intake">Food Intake</string>
    <string name="emergency">Emergency</string>
    <string name="child_care">Child Care</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="calendar">Calendar</string>
    <string name="reschedule">Reschedule</string>
    <string name="hospital_talk">Hospital Talk</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="more">More</string>
    <string name="mother">Mother</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email address to send you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artesunate">Artesunate</string>
    <string name="time">16:22</string>
    <string name="dose_amount">1 tablet</string>
    <string name="month">Dec 4</string>
    <string name="immunizationDrug">EVH Immunization</string>
    <string name="nutrition">Nutrition</string>
    <string name="breakfast_text">
        Porridge made with milk flavoured with a pinch of cinnamon and a tbsp apple puree\nGlass of apple juice
    </string>
    <string name="breakfast">Breakfast</string>
    <string-array name="trimesters">
        <item>First Trimester</item>
        <item>Second Trimester</item>
        <item>Third Trimester</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="appointments">Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="testSample">Electronic Fetal Sample</string>
    <string name="test_time">2nd Trimester(week 13 - 27)</string>
    <string name="messages">Messages</string>
</resources>
